feat: maybe it wants folders?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Indoor Plant Care</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 </head>
 
